Fix flexbox overflow

--- a/simongasse.de/landingPage.css
+++ b/simongasse.de/landingPage.css
@@ -90,7 +90,7 @@ body {
 
 .slogan {
     width: 60vw;
-    height: 15vh;
+    height: 24vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
